# NexusCore_MCP

./: .env.example  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  rust.yml
scripts/: setup_tools.ps1
src/: lib.rs  main.rs  server.rs
src/engine/: frida_handler.rs  mod.rs
src/resources/scripts/: api_monitor.js  auto_deobfuscate.js  stealth_unpacker.js
src/sandbox/: cape.rs  mod.rs
src/tools/: mod.rs
src/tools/common/: frida_session.rs  mod.rs  process.rs
src/tools/malware/: api_monitor.rs  debugger.rs  mod.rs  sandbox_submit.rs  x64dbg.rs
src/tools/malware/frida/: auto_deobfuscate.rs  mod.rs
src/tools/malware/wrappers/: external.rs
src/tools/system/: handles.rs  mod.rs  persistence.rs
src/utils/: response.rs
tests/: cache_test.rs  integration_test.rs  logging_test.rs  response_test.rs  sandbox_tests.rs  schema_test.rs  tool_tests.rs
