[package]
name = "nexuscore_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# frida = "3.0" # Version might need adjustment based on available crates, starting with typical
frida = { version = "0.17.0", features = [] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk" }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
